# zoned

./: .envrc  .gitignore  .rtx.toml  1  Cargo.toml  Cross.toml  Justfile  Makefile  README.md  TODO  config.json  config.sample.toml  create-dns-records  dhcp.mako  dist-workspace.toml  generate-dns-and-dhcp  generate-gateway-json  go.mod  go.sum  install  main.go  main.py  main.rs  networks.toml  pyproject.toml  requirements.txt  sully.org.json  sully.org.tf
.github/workflows/: build.yml  ci.yaml  ci.yml  publish.yml  release.yml
