[package]
name = "zoned"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/dsully/zoned"

[[bin]]
name = "zoned"
path = "main.rs"

[profile.release]
incremental = true
lto = true
opt-level = 3

[profile.dev]
debug = 1
incremental = true
lto = "off"

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4", default-features = false, features = ["derive", "help", "std", "usage"] }
clap-verbosity-flag = "2.2.0"
cloudflare = { version = "0.11.0", default-features = false, features = ["rustls-tls"] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
local-ip-address = "0.6.1"
reqwest = { version = "0.11.25", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xdg = "2.5.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Use Apple Silicon runners.
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
