[package]
description = "Update Cloudflare DNS with IPv6 addresses"
edition = "2021"
homepage = "https://github.com/dsully/zoned"
name = "zoned"
repository = "https://github.com/dsully/zoned"
version = "0.1.2"

[[bin]]
name = "zoned"
path = "main.rs"

[profile.release]
incremental = true
lto = true
opt-level = 3

[profile.dev]
debug = 1
incremental = true
lto = "off"

  [profile.dev.package."*"]
  opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
anyhow = "1.0.60"
clap = { version = "4", default-features = false, features = [
  "derive",
  "help",
  "std",
  "usage",
] }
clap-verbosity-flag = "2.2.1"
cloudflare = { git = "https://github.com/cloudflare/cloudflare-rs", rev = "f14720e4" }
config = { version = "0.14.0", default-features = false, features = [ "toml" ] }
local-ip-address = "0.6.1"
netdev = "0.30"
reqwest = { version = "0.12.5", features = [ "json" ] }
serde = "1"
serde_json = "1"
tokio = { version = "1.39.2", features = [
  "macros",
  "net",
  "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
xdg = "2.5.2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.18.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = [ "homebrew" ]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [ "aarch64-apple-darwin", "x86_64-unknown-linux-gnu" ]
# Publish jobs to run in CI
publish-jobs = [ "homebrew" ]
# Publish jobs to run in CI
pr-run-mode = "plan"

  # Use Apple Silicon runners.
  [workspace.metadata.dist.github-custom-runners]
  aarch64-apple-darwin = "macos-14"
