[tool.poetry]
name = "zoned"
version = "0.1.0"
description = "A tool to generate DNS in Linode from a Unifi Controller."
authors = ["Dan Sully <dsully@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
appdirs = "1.4.3"
click = "7.1.1"
linode-api4 = "^2.3"
python = "^3.7"
pyunifi = "^2.20"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
flake8 = "^3.7"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"