[project]
authors = [
    { name = "Dan Sully", email = "dsully@gmail.com" },
]
description = "A tool to generate DNS records from a Unifi Controller."
dynamic = [ "version" ]
license = { text = "MIT" }
name = "zoned"
version = "0.1.0"

requires-python = ">=3.9"

dependencies = [
    "aiohttp",
    "aiounifi",
    "click",
    "tomlkit",
    "dns-lexicon",
    "async-timeout>=4.0.2",
]

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "flake8",
    "mypy",
    "pyproject-flake8",
]

[tool.flake8]
max-line-length = 160

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "aiounifi",
    "aiohttp",
    "async_timeout",
    "lexicon.*",
]

[build-system]
build-backend = "pdm.pep517.api"
requires      = [ "pdm-pep517>=0.3.0" ]
