[project]
authors = [
  { name = "Dan Sully", email = "dan+github@sully.org" },
]
dependencies = [
    "cloudflare",
    "typer",
    "getmac>=0.9.3",
    "netaddr>=0.8.0",
    "netifaces>=0.11.0",
]
description = ""
license = { text = "MIT" }
name = "zoned"
requires-python = ">=3.10"
version = "1.0.0"

[project.scripts]
zoned = "main:app"

[build-system]
build-backend = "pdm.pep517.api"
requires = [ "pdm-pep517>=1.0.0" ]

[tool]
  [tool.pdm]
    [tool.pdm.dev-dependencies]
    dev = [
        "black",
        "ruff",
    ]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
